# discord-bot

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
secrets/: Discord_Token.age  secrets.nix
src/: commands.rs  main.rs  moderation.rs  translation.rs
src/translations/: en-AU.ftl
